# base-orphans

./: .gitattributes  .gitignore  .travis.yml  CHANGES.markdown  README.markdown  base-orphans.cabal  cabal.haskell-ci  package.yaml  stack.yaml
.github/workflows/: haskell-ci.yml
src/: BaseOrphans.hs
src/Control/Applicative/: Orphans.hs
src/Control/Exception/: Orphans.hs
src/Data/: Orphans.hs
src/Data/Bits/: Orphans.hs
src/Data/Foldable/: Orphans.hs
src/Data/Monoid/: Orphans.hs
src/Data/Ord/: Orphans.hs
src/Data/Orphans/: Prelude.hs
src/Data/Traversable/: Orphans.hs
src/Data/Typeable/: Orphans.hs
src/Data/Version/: Orphans.hs
src/Foreign/Storable/: Orphans.hs
src/GHC/Generics/: Orphans.hs
src/System/Console/GetOpt/: Orphans.hs
test/Control/Applicative/: OrphansSpec.hs
test/Control/Exception/: OrphansSpec.hs
test/Data/Bits/: OrphansSpec.hs
test/Data/Fixed/: OrphansSpec.hs
test/Data/Foldable/: OrphansSpec.hs
test/Data/Monoid/: OrphansSpec.hs
test/Data/Traversable/: OrphansSpec.hs
test/Data/Version/: OrphansSpec.hs
test/Foreign/Storable/: OrphansSpec.hs
test/GHC/Fingerprint/: OrphansSpec.hs
test/System/Posix/Types/: IntWord.hs  OrphansSpec.hs
