name:                base-orphans
version:             0.1.0
synopsis:            Backwards-compatible orphan instances for base
homepage:            https://github.com/haskell-compat/base-orphans
license:             MIT
license-file:        LICENSE
author:              Simon Hengel <sol@typeful.net>,
                     João Cristóvão <jmacristovao@gmail.com>,
                     Ryan Scott <ryan.gl.scott@ku.edu>
maintainer:          Simon Hengel <sol@typeful.net>,
                     João Cristóvão <jmacristovao@gmail.com>,
                     Ryan Scott <ryan.gl.scott@ku.edu>
copyright:           (c) 2012-2015 Simon Hengel,
                     (c) 2014 João Cristóvão,
                     (c) 2015 Ryan Scott
category:            Compatibility
build-type:          Simple
cabal-version:       >=1.8
extra-source-files:  CHANGES.markdown, README.markdown
description:         TODO: Better description

source-repository head
  type:                git
  location:            https://github.com/haskell-compat/base-orphans

library
  ghc-options:
      -Wall
  build-depends:
      base == 4.*
  hs-source-dirs:
      src
  
  exposed-modules:
      BaseOrphans
  -- other-modules:

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall
  hs-source-dirs:
      test
  main-is:
      Spec.hs
  build-depends:
      base > 4.0
    , base-orphans
    , hspec >= 1.8
    , QuickCheck
